# mpl-template

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  check_mpl_template.py  check_template.py  cleanup.sh  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
docs/: .buildinfo  .buildinfo.bak  Template_Docs.ipynb  api-1.py  api-2.py  api-3.py  api.html  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  template.html
docs/_downloads/352e9685df5f6ec52e91c88710a7efee/: api-2.py
docs/_downloads/4621112975d0141aecaa9b8c5af477cf/: api-3.py
docs/_modules/: index.html
docs/_modules/mpl_template/: template.html
docs/_sources/: index.rst.txt  overview.rst.txt
docs/_sources/tutorial/: Template_Docs.ipynb.txt
docs/_static/: documentation_options.js  pygments.css
docs/_static/js/: versions.js
docs/api/: template.html
docs/notebooks/overview/: overview.html
docs/notebooks/tutorial/: Template_Docs.html  Template_Docs.ipynb
docs/sphinx_docs/: Makefile
docs/sphinx_docs/source/: api.rst  conf.py  index.rst  (+1 more)
docs/tutorial/: Template_Docs.html
examples/: Template_Docs.ipynb
img/: Thumbs.db
mpl_template/: __init__.py  template.py
mpl_template.egg-info/: PKG-INFO  SOURCES.txt
mpl_template/tests/: __init__.py  test_template.py
nb/: Template_Docs.html  Template_Docs.ipynb
sphinx_docs/: Makefile  make.bat
sphinx_docs/source/: api.rst  conf.py  index.rst  overview.rst
template/: Thumbs.db  __init__.py  template.py
template.egg-info/: PKG-INFO  SOURCES.txt
template/.ipynb_checkpoints/: Template2-Copy1-checkpoint.ipynb  Template2-checkpoint.ipynb  Untitled-checkpoint.ipynb  nb_dev35-checkpoint.ipynb  test pkg-checkpoint.ipynb
template/tests/: __init__.py  test_template.py
(+4 files in other folders)
