[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpl_template"
description = "mpl-template: matplotlib report template constructor"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Austin Orr", email = "austinmartinorr@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["matplotlib>=2.5.0"]
dynamic = ["version"]

[project.optional-dependencies]
all = ["requests", "pillow"]
dev = [
    "mpl-template[all]",
    "coverage>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.1",
    "pytest-mpl>=0.16.0",
    "ruff>=0.1.4",
    "pre-commit>=3.3",
]
docs = ["sphinx", "nbsphinx", "sphinx-rtd-theme", "seaborn"]

[project.urls]
Homepage = "https://github.com/austinorr/mpl-template"
Documentation = "https://austinorr.github.io/mpl-template"
Repository = "https://github.com/austinorr/mpl-template"
Issues = "https://github.com/austinorr/mpl-template/issues"

[tool.setuptools]
package-dir = { mpl_template = "mpl_template" }

[tool.setuptools.dynamic]
version = { attr = "mpl_template.__version__" }

[tool.setuptools.package-data]
"mpl_template.tests.baseline_images" = ["*png"]
"mpl_template.tests.img" = ["*png", "*jpeg"]

[tool.coverage]
source = ["mpl_template"]

[tool.coverage.run]
branch = true
